<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/album_image"
        android:layout_width="160dp"
        android:layout_height="110dp"
        android:gravity="center"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/delete_album"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/album_name"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/album_image"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="Example"
        android:textSize="20sp" />

</RelativeLayout>