...
        android:layout_height="wrap_content"
        android:layout_above="@id/operationLayout"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <Button
            android:id="@+id/buttonDownload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/download" />

        <Button
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/downloadInBackground" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/uploadDownloadLayout"
        android:layout_alignParentTop="true"
        android:cacheColorHint="#00000000"
        android:divider="#808080"
...
