...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar1"
        android:layout_toRightOf="@id/radioButton1" />

    <TextView
        android:id="@+id/textState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/progressBar1" />

    <TextView
...
